--- a/src/app/main/apps/dashboards/analytics/analytics.component.scss
+++ b/src/app/main/apps/dashboards/analytics/analytics.component.scss
@@ -12,6 +12,7 @@
         flex: 1 1 auto;
         padding: 32px;
         min-width: 0;
+        margin-top: -5%;
 
         @include media-breakpoint('lt-lg') {
             flex-direction: column;
@@ -35,6 +36,7 @@
             width: 320px;
             min-width: 320px;
             max-width: 320px;
+            margin-left: 9%;
 
             @include media-breakpoint('lt-lg') {
                 flex: 1 0 100%;
@@ -44,14 +46,24 @@
                 max-width: none;
             }
 
+            @include media-breakpoint('xs') {
+                margin-left: 3%;
+            }
+
             .fuse-card {
+
+              
 
                 @include media-breakpoint('lt-lg') {
                     width: 100%;
                     min-width: 0;
                     max-width: none;
+                    
+                   
                 }
+
             }
+            
 
 
         }
@@ -66,17 +78,17 @@
 }
 
 .fuse-card {
-    max-width: 500px !important;
+    max-width: 100% !important;
 
 }
 
-.margin-cards {
+.card {
 
-    width: 500px;
+    margin-bottom: 5%;
+
+
     @include media-breakpoint('xs') {
-        width: 370px;
-        /* right: 12px; */
-        margin-left: -6%;
+        margin-bottom: 10%;
     }
     
 }
