--- a/src/app/layout/components/quick-panel/quick-panel.component.html
+++ b/src/app/layout/components/quick-panel/quick-panel.component.html
@@ -3,7 +3,7 @@
     <mat-list class="date" cdkFocusRegionStart>
 
         <h3 matSubheader cdkFocusInit>
-            <span>Today</span>
+            <span>Hoy</span>
         </h3>
 
         <div class="secondary-text mat-display-1 mb-0 p-16">
@@ -22,7 +22,7 @@
 
     <mat-list>
         <h3 matSubheader>
-            <span>Events</span>
+            <span>Eventos</span>
         </h3>
 
         <mat-list-item *ngFor="let event of events">
@@ -35,7 +35,7 @@
 
     <mat-list>
         <h3 matSubheader>
-            <span>Notes</span>
+            <span>Notas</span>
         </h3>
 
         <mat-list-item *ngFor="let note of notes">
