--- a/src/app/main/apps/e-commerce/product/campaigns/dialog/send/send.component.html
+++ b/src/app/main/apps/e-commerce/product/campaigns/dialog/send/send.component.html
@@ -9,6 +9,7 @@
 
     </mat-toolbar>
 
+    <div mat-dialog-content class="pb-0 m-0" fusePerfectScrollbar>
 
     <div id="send-invitation" fxLayout="column" class="content-send">
 
@@ -86,6 +87,10 @@
     
     </div>
 
+</div>
+
+
+<div mat-dialog-content class="pb-0 m-0" fusePerfectScrollbar>
     
    <div id="login" fxLayout="column">
 
@@ -170,6 +175,7 @@
     
     </div>
 
-    
+    </div>
 
+    
 </div>
