--- a/src/app/main/apps/e-commerce/product/product.component.html
+++ b/src/app/main/apps/e-commerce/product/product.component.html
@@ -204,7 +204,7 @@
 
                                     <div class="container">
 
-                                        <campaigns></campaigns>
+                                        <products-campaigns></products-campaigns>
                                      <!--
 
                                      <email-editor class="email-editor"></email-editor>
