--- a/src/app/main/ui/cards/cards.component.html
+++ b/src/app/main/ui/cards/cards.component.html
@@ -1832,12 +1832,14 @@
 
                             <mat-form-field>
                                 <mat-select class="simplified" value="today">
-                                    <mat-option value="today">Today</mat-option>
+                                    <mat-option value="today">Hoy</mat-option>
                                     <mat-option value="yesterday">Yesterday</mat-option>
                                 </mat-select>
                             </mat-form-field>
                         </div>
 
+
+                        <!--
                         <mat-list>
                             <mat-list-item>
                                 <h3 matLine>Group Meeting</h3>
@@ -1875,6 +1877,8 @@
                                 </p>
                             </mat-list-item>
                         </mat-list>
+
+                    -->
 
                         <div class="p-8 pt-16" fxLayout="row" fxLayoutAlign="start center">
                             <button mat-button color="accent">SEE COMPLETE SCHEDULE</button>
