--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,6 +21,13 @@ contacts-contact-list .mat-table .mat-row .mat-cell {
     padding: 0px;
 }
 
+.my-class-send .mat-dialog-container {
+    width: 1000px !important;
+    height: 300px !important;
+    padding: 0px;
+}
+
+
 
 
 
