--- a/src/app/main/apps/e-commerce/product/campaigns/campaigns.component.scss
+++ b/src/app/main/apps/e-commerce/product/campaigns/campaigns.component.scss
@@ -1,21 +1,18 @@
 @import "src/@fuse/scss/fuse";
 
-e-commerce-products {
+products-campaigns {
 
-    #products {
+    #campaign {
 
 
-
-        .top-bg {
-
-            @include media-breakpoint('lt-md') {
-                height: 256px;
-            }
-        }
 
         > .center {
 
+            height: 800px;
+
             > .header {
+
+                padding: 2%;
 
                 .search-wrapper {
                     width: 100%;
@@ -82,124 +79,133 @@ e-commerce-products {
     align-items: center;
 }
 
-.widget {
 
-    &.widget5 {
 
-        .gridline-path.gridline-path-horizontal {
-            display: none;
+
+
+
+    .content {
+
+        .category-selector {
+            min-width: 320px;
+        }
+
+        .filters {
+            width: 100%;
+            max-width: 1040px;
+            margin: 24px auto;
+            padding: 0 20px;
+
+            @include media-breakpoint('xs') {
+                margin: 0 auto;
+            }
+
+            .course-search {
+                width: 320px;
+
+                @include media-breakpoint('gt-xs') {
+                    margin-right: 16px;
+                }
+            }
+        }
+
+        .courses {
+            width: 100%;
+            max-width: 1040px;
+            margin: 0 auto;
+
+
+
+            .no-courses {
+                font-size: 24px;
+                margin: 24px 0;
+                text-align: center;
+            }
+
+            .course {
+                padding: 16px;
+
+                &:hover {
+
+                    .course-content {
+                        border: none;
+                        @include mat-elevation(12);
+                    }
+                }
+
+                .course-content {
+                    min-height: 240px;
+                    border-radius: 4px;
+                    overflow: hidden;
+                    transition: box-shadow 200ms ease-in-out;
+                    @include mat-elevation(1);
+
+                    .header {
+                        padding: 16px 24px;
+                        height: 64px !important;
+                        min-height: 64px !important;
+                        max-height: 64px !important;
+
+                        &.web-bg {
+                            background: mat-color($mat-blue, 500);
+                        }
+
+                        &.android-bg {
+                            background: mat-color($mat-green, 500);
+                        }
+
+                        &.firebase-bg {
+                            background: mat-color($mat-amber, 800);
+                        }
+
+                        &.cloud-bg {
+                            background: mat-color($mat-blue-grey, 500);
+                        }
+
+                        .category {
+                            text-transform: capitalize;
+                            text-align: left;
+                            font-weight: 600;
+                        }
+
+                        .length {
+
+                            .length-icon {
+                                margin-right: 8px;
+                            }
+
+                            .min {
+                                font-size: 16px;
+                            }
+                        }
+                    }
+
+                    .content {
+                        padding: 24px;
+
+                        .h1 {
+                            font-size: 16px;
+                            text-align: center;
+                        }
+
+                        .updated {
+                            font-size: 13px;
+                            font-weight: 600;
+                            margin-top: 4px;
+                        }
+                    }
+
+                    .footer {
+                        padding: 16px;
+                        height: 48px !important;
+                        min-height: 48px !important;
+                        max-height: 48px !important;
+                        box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.12);
+                    }
+                }
+            }
         }
     }
-}
-
-.widget-front {
-    flex-direction: row;
-    box-sizing: border-box;
-    display: flex;
-    place-content: flex-end;
-    align-items: center;
-    
-}
-.fuse-widget-front {
-    width: max-content;
-}
-
-.fuse-widget-back {
-    width: max-content;
-}
-
-
-
-
-.container-load
-{
-  position: relative;
-  margin-top: 0px;
-  margin-bottom: 25px;
-  width: 500px;
-  height: 300px;
-
-}
-.overlay
-{
-    border-radius: 3%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0);
-  transition: background 0.5s ease;
- }
-
-.img-empty
-{
-border-radius: 3%;
-  position: absolute;
-  width: 475px;
-  height: 295px;
-  left: 0;
-}
-
-.img-load
-{
-border-radius: 3%;
-  position: absolute;
-  width: 500px;
-  height: 300px;
-  left: 0;
-}
-.title
-{
-  position: absolute;
-  width: 500px;
-  left:0;
-  top:120px;
-  font-weight: 700;
-  font-size: 30px;
-  text-align: center;
-  text-transform: uppercase;
-  color: white;
-  transition: top .5s ease;
-}
-.container:hover .title
-{
-  top: 90px;
-}
-.button
-{
-  position: absolute;
-
-margin: 46%;
-  left:0;
-  top:  100px;
-  text-align: center;
-  opacity:0;
-  transition: opacity .25s ease;
-}
-.button a
-{
-  width: 200px;
-  padding: 12px 48px;
-  text-align: center;
-  color: white;
-  border: solid 2px white;
-  z-index: 1;
-}
-.toggle {
-    margin-left: 53%;
-}
-
-
-@include media-breakpoint('xs') {
-    .margin-card {
-        margin-left: -11%;
-    }
-    
-}
-
-
-
 
 
 
