fix design campaign

--- a/src/app/main/apps/e-commerce/product/campaigns/campaigns.component.html
+++ b/src/app/main/apps/e-commerce/product/campaigns/campaigns.component.html
@@ -112,7 +112,8 @@
                     <div class="footer" fxLayout="row" fxLayoutAlign="center center">
                         <button mat-button color="accent"
                         (click)="sendCampaignDialog(c)" >
-                            Enviar
+                         Enviar
+                         <mat-icon>send</mat-icon>
                         </button>
                     </div>
 
