--- a/src/app/main/apps/e-commerce/product/campaigns/campaigns.component.html
+++ b/src/app/main/apps/e-commerce/product/campaigns/campaigns.component.html
@@ -1,4 +1,4 @@
-<div id="campaign" class="page-layout carded fullwidth inner-scroll">
+<div id="campaign" class="page-layout-campaign carded fullwidth inner-scroll">
 
 
     <!-- CENTER -->
@@ -82,7 +82,7 @@
                             
                                 <button *ngIf="_campaignService.eventOpen"  (click)="linkOfEventOpen(c._id)" mat-menu-item  >
                                 <mat-icon>link</mat-icon>
-                                <span>Link para compartir</span>
+                                <span>Link de compartir</span>
                             </button>
                              
 
