--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,6 +27,12 @@ contacts-contact-list .mat-table .mat-row .mat-cell {
     padding: 0px;
 }
 
+.my-class-contact-list .mat-dialog-container {
+    width: 100% !important;
+    height: 300px !important;
+    padding: 0px;
+}
+
 
 
 
