--- a/src/app/main/apps/contacts/contact-form/contact-form.component.scss
+++ b/src/app/main/apps/contacts/contact-form/contact-form.component.scss
@@ -3,15 +3,22 @@
 .contact-form-dialog {
 
     @include media-breakpoint('xs') {
+       
         width: 100%;
+        max-width: 100vw !important;
     }
 
     @include media-breakpoint('gt-xs') {
-        width: 400px;
+       
+        width: 900px;
     }
 
     .mat-dialog-container {
+
+ 
         padding: 0;
+
+
 
         .mat-toolbar {
             flex: 1 0 auto;
@@ -37,4 +44,15 @@
 
 .form {
     margin-top: 5%;
+}
+
+.content {
+
+    
+    @include media-breakpoint('xs') {
+        margin-left: 3%;
+        margin-right: -3%;
+        margin-top: 3%;
+    }
+
 }
